# ChangeLog for app-crypt/p11-kit
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/p11-kit/ChangeLog,v 1.68 2014/08/10 02:26:59 patrick Exp $

  10 Aug 2014; Patrick Lauer <patrick@gentoo.org> p11-kit-0.13.ebuild,
  p11-kit-0.18.4.ebuild, p11-kit-0.19.3.ebuild, p11-kit-0.19.4.ebuild,
  p11-kit-0.20.1.ebuild, p11-kit-0.20.2-r1.ebuild, p11-kit-0.20.2.ebuild,
  p11-kit-0.20.3-r1.ebuild, p11-kit-0.20.3.ebuild:
  Fix description for more repoman happy

*p11-kit-0.20.3-r1 (02 Aug 2014)

  02 Aug 2014; Alon Bar-Lev <alonbl@gentoo.org> +p11-kit-0.20.3-r1.ebuild:
  Add libff USE flag, bug#518808

*p11-kit-0.20.3 (27 Jul 2014)

  27 Jul 2014; Tim Harder <radhermit@gentoo.org> +p11-kit-0.20.3.ebuild:
  Version bump.

  22 Jun 2014; Michał Górny <mgorny@gentoo.org> p11-kit-0.20.2-r1.ebuild:
  Fix installing gtk-doc manual, reported by galtgendo.

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> p11-kit-0.20.2-r1.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

  19 Apr 2014; Agostino Sarubbo <ago@gentoo.org> p11-kit-0.20.2.ebuild:
  Stable for sparc, wrt bug #507568

  18 Apr 2014; Agostino Sarubbo <ago@gentoo.org> p11-kit-0.20.2.ebuild:
  Stable for alpha, wrt bug #507568

  09 Mar 2014; Alon Bar-Lev <alonbl@gentoo.org> p11-kit-0.20.2-r1.ebuild:
  Disable unsafe tests, bug#502088

  06 Mar 2014; Agostino Sarubbo <ago@gentoo.org> p11-kit-0.20.2.ebuild:
  Stable for ppc64, wrt bug #500718

  25 Feb 2014; Markus Meier <maekke@gentoo.org> p11-kit-0.20.2.ebuild:
  arm stable, bug #500718

  23 Feb 2014; Agostino Sarubbo <ago@gentoo.org> p11-kit-0.20.2.ebuild:
  Stable for ppc, wrt bug #500718

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> p11-kit-0.20.2.ebuild:
  Stable for x86, wrt bug #500718

  20 Feb 2014; Akinori Hattori <hattya@gentoo.org> p11-kit-0.20.2.ebuild:
  ia64 stable wrt bug #500718

  18 Feb 2014; Pacho Ramos <pacho@gentoo.org> p11-kit-0.20.2.ebuild: